# omega-repro-joss

./: README.md  pyproject.toml
data/: README.md
examples/: reproduce_omega_pjm_fixed.ipynb  reproduce_pjm.py
omega_core/: __init__.py  events.py  metrics.py  omega.py  pjm.py
paper/: paper.bib  paper.md
tests/: test_core.py
